fix(inputs): remove negative z-index from radio and checkbox inputs
refs QUIZ-4636

test plan:
 - radio and checkbox inputs still work and act as before

Reviewed-on: https://gerrit.instructure.com/151860
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Tested-by: Jenkins

--- a/packages/ui-forms/src/components/Checkbox/styles.css
+++ b/packages/ui-forms/src/components/Checkbox/styles.css
@@ -20,8 +20,6 @@
   top: 0;
   offset-inline-start: 0;
   offset-inline-end: auto;
-  /* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
-  z-index: -1;
   opacity: 0.0001; /* selenium cannot find fully transparent elements */
 }
 
